@@ -1,4 +1,4 @@
-.TH darkice 1 "January 7, 2004" "DarkIce" "DarkIce live audio streamer"
+.TH darkice 1 "February 15, 2004" "DarkIce" "DarkIce live audio streamer"
 .SH NAME
 darkice \- an icecast / shoutcast live audio streamer
 .SH SYNOPSIS
@@ -85,6 +85,9 @@ Developed with contributions by
     Atsuhiko Yamanaka <ymnk@jcraft.com>
     Ricardo Galli <gallir@uib.es>
     John Hay <jhay@icomtek.csir.co.za>
+    Christian Forster <forster@like.e-technik.uni-erlangen.de>
+    John Deeny <taqueso@dilapidated.org>
+    Robert Lunnon <bobl@optushome.com.au>
 
 .SH LINKS
 Project homepage:
